--- a/admin/Createhackathon/HCreate.html
+++ b/admin/Createhackathon/HCreate.html
@@ -109,7 +109,7 @@
     <h1>Create a <font color = "#F73634">Hackathon</font></h1>
     <p id = "instruction">Please fill out the required information</p>
 
-    <form action="accepting_hackathon_data.php" method="POST">
+    <form action="accept_hackathon_data.php" method="POST">
       <br>
       <h2>Hackathon Details</h2>
       <input id="HName" name="HName" type="text"  placeholder=" Name of the Hackathon"/>
