--- a/admin/admin.html
+++ b/admin/admin.html
@@ -80,9 +80,10 @@
     </style>
 </head>
 <body>
-    <?php
+    <!-- <?php
         echo '<h1>Welcome <font color="#FFFFFF">'.$_SESSION["user_username"].'</font>,</h1>';
-    ?>
+    ?> -->
+    <h1>Welcome <font color="#FFFFFF">Admin</font>,</h1>
     <h2>Hackathon Details</h2>
     <table>
         <tr>
