--- a/admin/Createhackathon/HCreate.html
+++ b/admin/Createhackathon/HCreate.html
@@ -112,11 +112,11 @@
     <form action="accept_hackathon_data.php" method="POST">
       <br>
       <h2>Hackathon Details</h2>
-      <input id="HName" name="HName" type="text"  placeholder=" Name of the Hackathon"/>
-      <label for="HDate">Date: <input id="HDate" name="HDate" type="date" min="2024-03-01"  /></label>
-      <label for="HTime">Time: <input id="HTime" name="HTime" type="time"  /></label>
+      <input id="HName" name="HName" type="text"  placeholder=" Name of the Hackathon" required/>
+      <label for="HDate">Date: <input id="HDate" name="HDate" type="date" min="2024-03-01"  required/></label>
+      <label for="HTime">Time: <input id="HTime" name="HTime" type="time" required /></label>
 
-      <input id="MaxP" type="number" name="MaxP" max="5" placeholder=" Maximum Players per Team"/>
+      <input id="MaxP" type="number" name="MaxP" max="5" placeholder=" Maximum Players per Team" required/>
       <br>
       <p>Category</p>
         <input type="radio" id="jr-cadet" name="Category" value="jr-cadet">
