--- a/admin/Createhackathon/AddCriteria.html
+++ b/admin/Createhackathon/AddCriteria.html
@@ -88,13 +88,13 @@
         <h2>Critria Details</h2>
         <br>
         <input id="CName1" name="CName1" type="text"  placeholder=" Criteria 1" required/>
-        <input id="CWeight1" name="CWeight1" type="text"  placeholder=" Weight of Criteria 1" required/> 
+        <input id="CWeight1" name="CWeight1" type="number"  placeholder=" Weight of Criteria 1" required/> 
         <br><hr><br> 
         <input id="CName2" name="CName2" type="text"  placeholder=" Criteria 2" required/>
-        <input id="CWeight2" name="CWeight2" type="text"  placeholder=" Weight of Criteria 2" required/> 
+        <input id="CWeight2" name="CWeight2" type="number"  placeholder=" Weight of Criteria 2" required/> 
         <br><hr><br> 
         <input id="CName3" name="CName3" type="text"  placeholder=" Criteria 3" required/>
-        <input id="CWeight3" name="CWeight3" type="text"  placeholder=" Weight of Criteria 3" required/>
+        <input id="CWeight3" name="CWeight3" type="number"  placeholder=" Weight of Criteria 3" required/>
         <br>
         <button id="redirectButton">Submit</button>
     </form>
