--- a/error404.html
+++ b/error404.html
@@ -12,6 +12,10 @@
     padding: 0;
   }
 
+  body{
+    background-color: #272727;
+    color:white;
+  }
   .container{
     display: flex;
     align-items: center;
@@ -22,16 +26,58 @@
   }
 
   h1{
-    font-size: 15vw;
+    font-size: 20vw;
     font-weight: 700 !important;
-    background: url('bg.png');
+    background: url(https://img.freepik.com/premium-photo/abstract-silver-metallic-background-design_53876-143911.jpg);
+    background-size: cover;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
   }
+
+  button {
+    background-color: #F73634;
+    border: none;
+    border-radius: 1rem;
+    color: #fff;
+    cursor: pointer;
+    font-size: SMALL;
+    padding: 5px 15px;
+    margin-left: 1em;
+    margin-top: 2em;
+  }
+
+  h3{
+    margin:1rem;
+    letter-spacing: 2px;
+  }
+
+  button:hover{          
+    background-color: #000000;
+    color: #ffffff;
+  }
+
+  footer {
+            background-color: #000000;
+            color: #ffffff; 
+            padding: 5px;
+            text-align: center;
+            position: sticky;
+            top: 100%;
+        }
+
 </style>
 <body>
   <div class = "container">
     <h1>Oops!</h1>
-    <h3>404 - Page not found</h3>
-    <button>go back to homepage</button>
+    <h3>404 - PAGE NOT FOUND</h3>
+    <p>The page you are looking for might have been removed</p>
+    <p>had its name changed or is temporarily unavailable.</p>
+    <button>GO TO HOMEPAGE</button>
   </div>
 </body>
+<footer>
+  <p>Code Battle &copy; 2024. All rights reserved. Made in U.A.E</p>
+  <p>Contact us at: info@codebattle.com</p>
+</footer>
 </html>
