--- a/admin/Createhackathon/AddJudge.html
+++ b/admin/Createhackathon/AddJudge.html
@@ -30,7 +30,7 @@ if(isset($_SESSION['H_judges_added'])){
             min-height: 100vh;
             margin: 0;
             background-color: #272727;
-            color: white;
+            color: black;
             font-family: Tahoma;
             font-size: 16px;
         }
@@ -38,6 +38,8 @@ if(isset($_SESSION['H_judges_added'])){
         #instruction{
             font-size: large;
             text-align: center;
+            color: #ffffff;
+            font-weight: bold;
         }
 
         h1{
@@ -55,7 +57,7 @@ if(isset($_SESSION['H_judges_added'])){
 
         input{
             background-color: #ffffff;
-            border: 1px;
+            border: 1px solid;
             color: #272727;
             border-radius: 25px ;
         }
@@ -72,8 +74,7 @@ if(isset($_SESSION['H_judges_added'])){
         }
 
         button:hover{
-            background-color: #ffffff;
-            color: #272727;
+            background-color: #F73634;
         }
         .discard-button{
             background-color: #F73634;
@@ -166,7 +167,7 @@ if(isset($_SESSION['H_judges_added'])){
             var jr_cadetLabel, jr_colonelLabel, jr_captainLabel;
             var heading;
 
-            document.getElementById("text-field-container").style.backgroundColor = "#F73634";
+            document.getElementById("text-field-container").style.backgroundColor = "#ffffff";
 
             container.appendChild(document.createElement("br")); 
 
@@ -181,6 +182,7 @@ if(isset($_SESSION['H_judges_added'])){
                 container.appendChild(judgeName);
 
                 heading = document.createElement("h2");
+                heading.style.color = "#F73634"
                 temp = document.createTextNode("Judge "+(i+1)+" Details");
                 heading.appendChild(temp);
                 document.getElementById("text-field-container").insertBefore(heading,document.getElementById("JName_"+(i+1)));
@@ -286,9 +288,9 @@ if(isset($_SESSION['H_judges_added'])){
     ?>
 
     <form action="accept_judges_data.php" method="POST" id = "formid">
-    <div class="button-container">
+    <!-- <div class="button-container">
             <button type="submit" class = "discard-button" name = "discard">Discard Hackathon</button>
-    </div>
+    </div> -->
 
         <div class = "select-container">
             <p for="judges" id = "instruction">Select the number of judges</p>
