--- a/admin/Createhackathon/AddJudge.html
+++ b/admin/Createhackathon/AddJudge.html
@@ -71,7 +71,7 @@ if(isset($_SESSION['H_judges_added'])){
             padding: 0.5rem;
             width: 25%;
             margin-top: 2rem;
-            margin-left: 15%;
+            margin-left: 1rem;
         }
 
         button:hover{
@@ -95,6 +95,7 @@ if(isset($_SESSION['H_judges_added'])){
 
         #text-field-container{
             width: 60vw;
+            text-align: center;
             max-width: 500px;
             min-width: 300px;
             margin: 1rem auto;
