--- a/admin/Createhackathon/AddCriteria..html
+++ b/admin/Createhackathon/AddCriteria..html
@@ -45,6 +45,7 @@ if(isset($_SESSION['H_added_criteria'])){
 
         h1{
             margin-top: 1em auto;
+            margin-bottom: 2em;
             text-align: center;
         }
 
