--- a/admin/Createhackathon/AddCriteria..html
+++ b/admin/Createhackathon/AddCriteria..html
@@ -71,6 +71,7 @@ if(isset($_SESSION['H_added_criteria'])){
             border: 1px solid;
             margin-left: auto;
             text-align: center;
+            display:none
             
         }
         
@@ -140,6 +141,14 @@ if(isset($_SESSION['H_added_criteria'])){
 
     </style>
 
+    <script>
+
+        function clicked(){
+            document.getElementById("")
+        }
+
+    </script>
+
 </head>
 <body>
     <?php
@@ -152,7 +161,7 @@ if(isset($_SESSION['H_added_criteria'])){
         <br>
         <h1>Criteria <font color="#F73634">Details</font></h1>
 
-        <div class="Criteria-Container">
+        <div class="Criteria-Container" id = "C1Box" onclick="clicked()">
             <input type="checkbox">
             <label>Presentation</label>
             <input id="CWeight1" name="CWeight1" type="number"  placeholder=" Weight of Criteria 1" required/> 
@@ -161,7 +170,7 @@ if(isset($_SESSION['H_added_criteria'])){
         <hr>
 
         <div class="Criteria-Container">
-            <input type="checkbox">
+            <input type="checkbox" id = "C2Box" onclick="clicked()">
             <label>Code</label>
             <input id="CWeight2" name="CWeight2" type="number"  placeholder=" Weight of Criteria 2" required/> 
         </div>
@@ -169,7 +178,7 @@ if(isset($_SESSION['H_added_criteria'])){
         <hr>
 
         <div class="Criteria-Container">
-            <input type="checkbox">
+            <input type="checkbox" id = "C3Box" onclick="clicked()">
             <label>User Interface</label>
             <input id="CWeight3" name="CWeight3" type="number"  placeholder=" Weight of Criteria 3" required/>
         </div>
@@ -177,7 +186,7 @@ if(isset($_SESSION['H_added_criteria'])){
         <hr>
 
         <div class="Criteria-Container">
-            <input type="checkbox">
+            <input type="checkbox" id = "C4Box" onclick="clicked()">
             <label>Teamwork</label>
             <input id="CWeight4" name="CWeight4" type="number"  placeholder=" Weight of Criteria 4" required/>
         </div>
@@ -185,7 +194,7 @@ if(isset($_SESSION['H_added_criteria'])){
         <hr>
 
         <div class="Criteria-Container">
-            <input type="checkbox">
+            <input type="checkbox" id = "C5Box" onclick="clicked()">
             <label>Creativity</label>
             <input id="CWeight5" name="CWeight5" type="number"  placeholder=" Weight of Criteria 5" required/>
         </div>
